@@ -126,27 +126,30 @@ gettextf <- function(fmt, ..., domain = NULL, trim = TRUE)
 
 ## Could think of using *several* domains, i.e. domain = vector; but seems complicated;
 ## the default domain="R"  seems to work for all of base R: {"R", "R-base", "RGui"}
-Sys.setLanguage <- function(lang, unset = "en")
+Sys.setLanguage <- function(lang, unset = "en", allowC4en = TRUE)
 {
     if (!capabilities("NLS") || is.na(.popath)) {
         warning(gettextf("no natural language support or missing translations"), domain=NA)
-        return(invisible(""))
+        return(invisible(structure("", ok = FALSE)))
     }
     stopifnot(is.character(lang), length(lang) == 1L, # e.g., "es" , "fr_CA"
               lang == "C" || grepl("^[a-z][a-z]", lang))
     curLang <- Sys.getenv("LANGUAGE", unset = NA) # so it can be reset
     if(is.na(curLang) || !nzchar(curLang))
         curLang <- unset # "factory" default
-    if(isC <- identical("C", Sys.getlocale())) { ## e.g. LC_ALL=C R  on Linux
+    Warning <- if(allowC4en && startsWith(lang, "en")) message else warning
+    if(identical("C", Sys.getlocale()) && lang != "C") { ## e.g. LC_ALL=C R  on Linux
         lcSet <- if(.Platform[["OS.type"]] == "unix")
                      Sys.setlocale("LC_MESSAGES", "en_US.UTF-8")
-        ## TODOs: 1) does  en_US.UTF-8  always exist?   2) need to deal w/ Windows ?
+        ## TODOs: 1) does  en_US.UTF-8  always exist?
+        ##        2) How to deal w/ Windows ? {can set things but with *no* effect}
         ok.lc <- !is.null(lcSet) && nzchar(lcSet) # NULL or ""  are not ok
-        if(!ok.lc) warning(gettextf("In a bare C locale, could not change language"), domain=NA)
+        if(!ok.lc)
+            Warning(gettextf("In a bare C locale, could not change language"), domain=NA)
     } else ok.lc <- TRUE
     ok <- Sys.setenv(LANGUAGE=lang)
     if(!ok)
-        warning(gettextf('Sys.setenv(LANGUAGE="%s") may have failed', lang), domain=NA)
+        Warning(gettextf('Sys.setenv(LANGUAGE="%s") may have failed', lang), domain=NA)
     ok. <- capabilities("NLS") &&
         isTRUE(bindtextdomain(NULL)) # only flush the cache (of already translated strings)
     invisible(structure(curLang, ok = ok && ok.lc && ok.))
